<resources>
    <string name="app_name">i花瓣</string>
    <string name="home">首页</string>
    <string name="newest">最新</string>
    <string name="find">发现</string>
    <string name="category">分类</string>
    <string name="weekly">周刊</string>
    <string name="blog">博客</string>
    <string name="board">我的画板</string>
    <string name="follow">我的关注</string>
    <string name="fans">我的粉丝</string>
    <string name="theme">主题选择</string>
    <string name="setting">设置&amp;反馈</string>

    <string-array name="category_item">
        <item name="category_food">美食</item>
        <item name="category_travel">旅行</item>
        <item name="category_handcraft">手工</item>
        <item name="category_pet">宠物</item>
        <item name="category_gift">礼物</item>
        <item name="category_geek">极客</item>
        <item name="category_anime">动漫</item>
        <item name="category_game">游戏</item>
        <item name="category_building">建筑</item>
        <item name="category_movie">电影</item>
        <item name="category_funny">搞笑</item>
    </string-array>
</resources>
